# MDI_Library

./: .buildinfo  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.html  README.md  azure-pipelines.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.azure-pipelines/: azure-pipelines-simple.yml  azure-pipelines-vs.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  sphinx_build.yml
MDI_Library/: CMakeLists.txt  __init__.py  communicator.c  communicator.h  elements.h  mdi.c  mdi.h  mdi.py  mdi_f90.F90  mdi_general.c  mdi_general.h  mdi_global.c  mdi_global.h  mdi_lib.c  mdi_lib.h  mdi_manager.c  mdi_manager.h  mdi_mpi.c  mdi_mpi.h  mdi_mpi4py.py  mdi_plug_py.c  mdi_plug_py.h  mdi_tcp.c  mdi_tcp.h  mdi_test.c  mdi_test.h  method.c  method.h  physconst.h
MDI_Library/STUBS_MPI/: mpi.h
MDI_Library/STUBS_Python/: mdi_plug_py.c  mdi_plug_py.h
_downloads/6b6d7a8ac750f265f5ac991022f2d100/: mdimechanic.yml
_downloads/a75d7ffe3f07dc210b6b6b6c78c58128/: mdimechanic.yml
_downloads/c669be631367b66231c80a9985403efc/: mdimechanic.yml
_sources/: README.md.txt  index.rst.txt
_sources/_tags/: dft.md.txt  gas-phase-quantum-mechanics.md.txt  molecular-dynamics.md.txt  monte-carlo.md.txt  plane-wave-dft.md.txt  quantum-mechanics.md.txt  tagsindex.md.txt
_sources/developer_guide/: engine_tutorial.md.txt  plugin_system.md.txt  writing_driver.md.txt
_sources/getting_started/: index.md.txt  running_driver.md.txt  writing_driver.md.txt
_sources/user_guide/: installation.md.txt
_static/: pygments.css
_tags/: dft.html  gas-phase-quantum-mechanics.html  molecular-dynamics.html  monte-carlo.html  plane-wave-dft.html  quantum-mechanics.html  tagsindex.html
api/: index.html
api/mdi_library/: cpp_interface.html
api/mdi_standard/: index.html
cmake/: mdiConfig.cmake.in
developer_guide/: engine_tutorial.html  index.html  launching_plugins.html  opening_plugins.html  plugin_nuances.html  plugin_system.html  writing_driver.html
docs/: .gitignore  Doxyfile  README.md  conf.py  create_page.py  engine_reports.py  engines.yaml  header.html  make.bat  mdi_standard.yaml  requirements.txt  requirements.yaml
docs/api/: index.md
docs/doxygen_source/: ecosystem.dox  engine_tutorial.dox  library.dox  mainpage.dox  standard.dox  tutorials.dox
docs/getting_started/: installation.rst
docs/html/: annotated.html  classCommunicator-members.html  classCommunicator.html  classCommunicatorMPI-members.html  classCommunicatorMPI.html  classCommunicatorTCP-members.html  classCommunicatorTCP.html  (+151 more)
doxygen/: Doxyfile  header.html
getting_started/: index.html  installation.html  running_driver.html  writing_driver.html
molssi_driver_interface/: CMakeLists.txt  communicator.c  communicator.cpp  communicator.h  mdi.c  mdi.cpp  mdi.h  mdi.py  mdi_f90.f90  mdi_global.cpp  mdi_global.h  mdi_manager.c  mdi_manager.cpp  mdi_manager.h  mdi_python.py  method.c  method.cpp  method.h
molssi_driver_interface/STUBS_MPI/: mpi.h
rust/: CMakeLists.txt  Cargo.toml  README.md
rust/mdi/: Cargo.toml
rust/mdi-sys/: Cargo.toml  build.rs
rust/mdi-sys/src/: lib.rs
rust/mdi/examples/: driver.rs  engine.rs
rust/mdi/src/: comm.rs  datatype.rs  error.rs  lib.rs
sphinx-docs/: Makefile  categories.yaml  command_pages.yaml  conf.py  create_page_v2.py  engines.yaml  index.rst  requirements.txt
tests/: CMakeLists.txt  conftest.py  cxx-cxx_tcp.sh  cxx-f90_tcp.sh  cxx-py_tcp.sh  f90-cxx_tcp.sh  f90-f90_tcp.sh  f90-py_tcp.sh  py-cxx_tcp.sh  py-f90_tcp.sh  py-py_tcp.sh  test_element.py  test_mdi.py  test_uninit.py  test_unit.py  valgrind.supp
tests/MDI_Test_Codes/: CMakeLists.txt
tests/MDI_Test_Codes/STUBS_MPI/: CMakeLists.txt  mpi.F90  mpi.h
tests/MDI_Test_Codes/driver_cxx/: CMakeLists.txt  driver_cxx.cpp
tests/MDI_Test_Codes/driver_cxx_serial/: CMakeLists.txt
tests/MDI_Test_Codes/driver_f90/: CMakeLists.txt  driver_f90.f90
tests/MDI_Test_Codes/driver_ipicomp_py/: CMakeLists.txt  driver_ipicomp_py.py
tests/MDI_Test_Codes/driver_plug_cxx/: CMakeLists.txt  driver_plug_cxx.cpp
tests/MDI_Test_Codes/driver_plug_f90/: CMakeLists.txt  driver_plug_f90.f90  mdi_implementation.f90
tests/MDI_Test_Codes/driver_plug_py/: CMakeLists.txt  driver_plug_py.py
tests/MDI_Test_Codes/driver_py/: CMakeLists.txt  driver_py.py
tests/MDI_Test_Codes/driver_repeat_cxx/: CMakeLists.txt  driver_repeat_cxx.cpp
tests/MDI_Test_Codes/driver_rust/: CMakeLists.txt  Cargo.toml
tests/MDI_Test_Codes/driver_rust/src/: main.rs
tests/MDI_Test_Codes/driver_serial_cxx/: CMakeLists.txt  driver_serial_cxx.cpp
tests/MDI_Test_Codes/engine_cxx/: CMakeLists.txt  engine_cxx.cpp  engine_cxx.h
tests/MDI_Test_Codes/engine_f90/: CMakeLists.txt  engine_f90.f90  mdi_implementation.f90
tests/MDI_Test_Codes/engine_ipi_cxx/: CMakeLists.txt  engine_ipi_cxx.cpp  ipi_sockets.h
tests/MDI_Test_Codes/engine_py/: CMakeLists.txt  engine_py.py
tests/MDI_Test_Codes/engine_rust/: CMakeLists.txt  Cargo.toml
tests/MDI_Test_Codes/engine_rust/src/: main.rs
tests/MDI_Test_Codes/lib_cxx/: CMakeLists.txt  driver_lib_cxx.cpp  engine_lib_cxx.cpp  engine_lib_cxx.h
tests/MDI_Test_Codes/lib_cxx_cxx/: CMakeLists.txt  driver_lib_cxx_cxx.cpp  engine_lib_cxx_cxx.cpp  engine_lib_cxx_cxx.h
tests/MDI_Test_Codes/lib_cxx_py/: CMakeLists.txt  driver_lib_cxx_py.cpp  engine_lib_cxx_py.py
tests/MDI_Test_Codes/lib_f90/: CMakeLists.txt  driver_lib_f90.F90  engine_lib_f90.F90
tests/MDI_Test_Codes/lib_py/: CMakeLists.txt  lib_py.py
tests/MDI_Test_Codes/misc_py/: CMakeLists.txt  ut_init_double.py  ut_init_fake_method.py  ut_init_fake_opt.py  ut_init_fake_role.py  ut_init_no_hostname.py  ut_init_no_method.py  ut_init_no_name.py  ut_init_no_port_d.py  ut_init_no_port_e.py  ut_init_no_role.py  ut_init_noarg_driver_name.py  ut_init_noarg_hostname.py  ut_init_noarg_language.py  ut_init_noarg_method.py  ut_init_noarg_name.py  ut_init_noarg_out.py  ut_init_noarg_port.py  ut_init_noarg_role.py  ut_tmethod.py
user_guide/: index.html  installation.html  mdi_standard.html
(+410 files in other folders)
