[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymdi"
dynamic = ["version"]
description = "A library that enables code interoperability via the MolSSI Driver Interface."
readme = "README.md"
authors = [
    { name = "Taylor Barnes", email = "mdi@molssi.org" }
]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.7"
]

[project.urls]
"Source" = "https://github.com/MolSSI-MDI/MDI_Library"
"Documentation" = "https://molssi-mdi.github.io/MDI_Library/html/index.html"

[dependencies]

[tool.setuptools]
packages = ["mdi"]
package-dir = { "mdi" = "MDI_Library" }
