[package]
name = "mdi-sys"
version = "0.1.0"
edition = "2021"
description = "Raw FFI bindings to the MolSSI Driver Interface (MDI) library"
license = "BSD-3-Clause"
repository = "https://github.com/MolSSI-MDI/MDI_Library"
keywords = ["mdi", "molssi", "chemistry", "ffi"]
categories = ["external-ffi-bindings", "science"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
