[package]
name = "mdi"
version = "0.1.0"
edition = "2021"
description = "Safe Rust bindings to the MolSSI Driver Interface (MDI) library"
license = "BSD-3-Clause"
repository = "https://github.com/MolSSI-MDI/MDI_Library"
keywords = ["mdi", "molssi", "chemistry", "scientific-computing"]
categories = ["science", "api-bindings"]

[dependencies]
mdi-sys = { path = "../mdi-sys" }
thiserror = "1.0"
libc = "0.2"
